--- a/user/index.html
+++ b/user/index.html
@@ -14,7 +14,14 @@
 
     </style>
     <meta charset="UTF-8" />
-    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PG2P7QZ98W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PG2P7QZ98W');
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinkMan || manage your links easily</title>
   </head>
